fixed layout issue with intro arrow

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -6,10 +6,6 @@
 
 /* Footer */
 
-footer.intro {
-    text-align: left;
-}
-
 	#footer {
 		position: relative;
 		height: 5em;
