--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -199,3 +199,8 @@
 			}
 		}
 	}
+
+a.intro.button.style2.down {
+    text-align: left;
+    display: block;
+}
